--- a/src/App.css
+++ b/src/App.css
@@ -4,5 +4,6 @@ body {
   padding: 0;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
-  background-color: #faf9f6;
+  background-color: #a7e1f8;
+  box-align: center;
 }
